# memory_capsule

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  WHISPER_TEST_SUMMARY.md  capsule_cli.py  config.py  config.yaml  pyproject.toml  requirements.txt  test_config.py  test_whisper.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
api/: main.py  normalizer.py  state.py
api/middleware/: auth.py
api/routes/: capsules.py  health.py  search.py  webhooks.py
browser-extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
capsule/: __init__.py  models.py  pipeline.py
capsule/ingest/: __init__.py  audio.py  image.py  pdf.py  text.py
capsule/search/: __init__.py  engine.py  nlp_date.py
capsule/store/: __init__.py  sqlite.py  vector.py
cli/: __main__.py
daemon/: __main__.py  job_queue.py  watcher.py
docker/: Dockerfile  docker-compose.yml
examples/: android_shortcut.md  curl_examples.sh  ios_shortcut.md  n8n_workflow.json  python_sdk_example.py  zapier_setup.md
integrations/discord/: watcher.py
integrations/email/: watcher.py
integrations/slack/: watcher.py
integrations/telegram/: watcher.py
integrations/webhooks/: normalizer.py
integrations/whatsapp/: bridge.js  package.json
providers/: __init__.py  _openai_client.py  anthropic.py  base.py  groq.py  ollama.py  openai.py  registry.py
providers/embed/: __init__.py  gemini.py  openai_compatible.py
providers/llm/: __init__.py  anthropic.py  gemini.py  openai_compatible.py  prompts.py
providers/ocr/: __init__.py  _shared.py  anthropic.py  easyocr.py  gemini.py  openai_compatible.py
providers/transcribe/: __init__.py  fallback.py  gemini.py  openai.py  openai_compatible.py  whisper.py
sdk/js/: package.json
sdk/js/src/: index.js
sdk/python/: pyproject.toml  setup.py
sdk/python/memory_capsule/: __init__.py  client.py
tests/integration/: test_pipeline.py
tests/unit/: test_ingest_text.py  test_models.py  test_nlp_date.py
