[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-memory-capsule"
version = "0.1.0"
description = "Python SDK for Open Memory Capsule — capture everything, search naturally"
readme = "../../README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]

[project.urls]
Homepage = "https://github.com/moizBhai97/memory_capsule"
